# bazel-docker-images-showcase

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  rules_docker_gnu_tar.patch
.github/workflows/: build.yaml
